# pablo-tv

./: .envrc  .gitignore  .hlint.yaml  README.md  cabal.project  flake.nix  haskell-tv.cabal  pablo-tv.cabal  static  weeder.toml
app/: Main.hs
backend/: .hlint.yaml  cabal.project.local  pablo-tv.cabal  weeder.toml
backend/app/: Main.hs
backend/elm-gen/: ElmHelpers.hs  Main.hs
backend/src/: Actions.hs  Directory.hs  Env.hs  Foundation.hs  ImageScraper.hs  JSON.hs  LibMain.hs  Logging.hs  Mpris.hs  NetworkInfo.hs  PVar.hs  SafeConvert.hs  SafeIO.hs  Samba.hs  Server.hs  TVState.hs  Transformers.hs  Util.hs
backend/src/Directory/: Directories.hs  Files.hs  Paths.hs
backend/src/Util/: Regex.hs  TextWithoutSeparator.hs
backend/templates/: debug.hamlet  debug.julius  default.julius  default.lucius  directory.hamlet  directory.lucius  home.hamlet  home.julius  input.hamlet  ips.lucius  remote.hamlet
backend/test/: ActionsSpec.hs  DirectorySpec.hs  Orphanage.hs  PVarSpec.hs  TestUtils.hs  WebSpec.hs
backend/test/Directory/: FilesSpec.hs
backend/test/golden/: actions.json  manual-add-root.json
exe/: Main.hs
frontend/: elm-watch.json  elm.json  pablo-tv-miso.cabal  postprocess-hot-css.js
frontend/app/: Main.hs
frontend/css/: _arrowNav.scss  _buttonsGrid.scss  _dir.scss  _header.scss  _home.scss  _input.scss  _ips.scss  main.scss
frontend/src/: AggDir.elm  AggDirInfo.elm  ButtonsGrid.elm  Dir.elm  Error.elm  Header.elm  Home.elm  IPs.elm  Input.elm  LibMain.hs  LocalStorage.elm  Main.elm  Ports.elm  QR.elm  Remote.elm  Routes.elm
frontend/src/Html/: Extras.elm  Util.elm
frontend/src/String/: Util.elm
frontend/src/Time/: Extra.elm  Util.elm
frontend/static/: arrow-nav.js  index.html
scripts/: dev.sh  test-dev.sh
src/: Actions.hs  DB.hs  Directory.hs  DirectoryNew.hs  DirectoryOld.hs  Files.hs  Foundation.hs  ImageScraper.hs  IsDevelopment.hs  JSON.hs  LibMain.hs  Logging.hs  MPV.hs  Mobile.hs  Mpris.hs  MyLib.hs  Orphanage.hs  PVar.hs  Playerctl.hs  Regex.hs  SafeConvert.hs  SafeIO.hs  SafeMaths.hs  SaferIO.hs  Samba.hs  TV.hs  TVDB.hs  TVState.hs  Transformers.hs  Util.hs  Watched.hs
src/Directory/: Directories.hs  Files.hs  Info.hs  Paths.hs  Watched.hs
src/Directory/Watched/: Agg.hs
src/Util/: AbsFilePath.hs  DirPath.hs  TextWithoutSeparator.hs
static/: arrow-navigation.js
templates/: debug.hamlet  debug.lucius  default-layout.julius  default-layout.lucius  default.hamlet  default.julius  default.lucius  directory.hamlet  directory.julius  directory.lucius  home.hamlet  home.julius  home.lucius  input.hamlet  input.julius  input.lucius  ips.hamlet  keyboard.hamlet  mouse-pointer.hamlet  mouse-pointer.julius  remote.hamlet  shared-default.julius  shared-default.lucius  shared-layout-wrapper.hamlet  shared-page-wrapper.hamlet  trackpad.hamlet  trackpad.julius  tv-home.julius  tv-home.lucius  tv.hamlet  tv.julius  tv.lucius
templates/mobile/: default.hamlet  default.julius  default.lucius  directory-and-file.lucius  directory.hamlet  directory.julius  directory.lucius  file.hamlet  file.julius  files.hamlet  home.hamlet  home.lucius  input.hamlet  input.julius  input.lucius  keyboard.julius  mouse-pointer.hamlet  mouse-pointer.julius  remote.hamlet  remote.julius  remote.lucius  trackpad.julius
templates/tv/: default.julius  default.lucius  home.hamlet  home.julius  home.lucius  ips.lucius
test/: ActionsSpec.hs  DirectoryNewSpec.hs  DirectoryOldSpec.hs  DirectorySpec.hs  FilesSpec.hs  Orphanage.hs  PVarSpec.hs  TestUtils.hs  TextWithoutSeparatorSpec.hs  Todo.hs  WatchedSpec.hs  WebSpec.hs
test/Directory/: InfoSpec.hs
test/directories/Videos/Grouped Movies/second-movie-v1/: info.yaml
test/directories/Videos/movie-b-v1/: info.yaml
test/directories/Videos/tv-multi-s-v1/: info.yaml
test/golden/: all-info.yaml  basic-info.yaml  basicOnfo.yaml  cleanFileName  manual-add-root.json  simple.json  watched-info.yaml  with-description.yaml
