cabal-version: 3.0
name: pablo-tv
version: 0.1.0.0
synopsis: An attempt at making some kind of smart tv app
-- description:
license: NONE
author: Pablo Bollansee
build-type: Simple
-- extra-doc-files:    README.md
extra-source-files:
  templates/**/*.cassius
  templates/**/*.hamlet
  templates/**/*.julius
  templates/**/*.lucius

flag development
  description: Turn on development build
  default: False

common defaults
  default-language: GHC2021
  build-depends: base >=4.18.2.1 && <5
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wunused-packages
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -freverse-errors
    -fwrite-ide-info

  default-extensions:
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    StrictData

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Actions
    Directory
    Directory.Directories
    Directory.Files
    Directory.Paths
    Env
    ImageScraper
    IsDevelopment
    JSON
    LibMain
    Logging
    Mpris
    NetworkInfo
    Orphanage
    PVar
    SafeConvert
    SafeIO
    Samba
    Server
    TVState
    Transformers
    Util
    Util.DirPath
    Util.Regex
    Util.TextWithoutSeparator

  if flag(development)
    cpp-options: -DDEVELOPMENT
  build-depends:
    -- Later versions of random have a shuffle function, but for now we need this package
    aeson,
    async,
    bounded-queue,
    bytestring,
    containers,
    dbus,
    directory,
    evdev,
    exceptions,
    extra,
    filepath,
    ghc,
    hashable,
    http-client,
    http-types,
    modern-uri,
    natural-sort,
    network-info,
    network-uri,
    process,
    random,
    random-shuffle,
    regex-tdfa,
    req,
    scalpel,
    scientific,
    servant-server,
    stm,
    template-haskell,
    text,
    time,
    transformers,
    unix,
    unliftio,
    unordered-containers,
    utf8-string,
    wai,
    warp,
    websockets,

executable pablo-tv
  import: defaults
  hs-source-dirs: app
  main-is: Main.hs
  -- other-modules:
  build-depends:
    pablo-tv

executable elm-gen
  import: defaults
  main-is: Main.hs
  hs-source-dirs:
    elm-gen

  other-modules:
    ElmHelpers

  build-depends:
    bytestring,
    elm-bridge,
    http-types,
    pablo-tv,
    servant-elm,
    servant-foreign,
    servant-server,
    template-haskell,
    text,

test-suite pablo-tv-test
  import: defaults
  hs-source-dirs: test
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  other-modules:
    ActionsSpec
    Directory.FilesSpec
    DirectorySpec
    Orphanage
    PVarSpec
    TestUtils

  build-depends:
    QuickCheck,
    aeson,
    bytestring,
    containers,
    directory,
    exceptions,
    filepath,
    generic-random,
    pablo-tv,
    path,
    quickcheck-instances,
    sydtest,
    sydtest-aeson,
    sydtest-discover,
    text,
    time,
    unix,
    unliftio,
    unordered-containers,
